gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/message/MainFeedback.css
/* ... */
.messages-topPanel-text {
	padding-right: 20px;
}

ul.messagesTop li, ul.tempMessagesTop li {
	padding-bottom: 5px;
	list-style: none outside none;
	margin: 0px;
}

ul.messagesTop ul li, ul.tempMessagesTop ul li {
	padding: 1px 0px;
}

ul.messagesTop .messages-details {
	margin-top: 0px;
}

ul.messagesTop .messages-error{
	color: #cc0a0c;
	border: 1px solid #d21f1e;
	padding: 0px;
	-moz-border-radius: 4px; 
	-webkit-border-radius: 4px; 
	-khtml-border-radius: 4px; 
	border-radius: 4px;
	background: #ffd7ca;
	display: block;
}

/* { */
/* 	display: block; */
/* 	padding-left: 20px; */
/* 	padding-bottom: 5px; */
/* 	padding-right: 10px; */
/* } */
ul.messagesTop .messages-error .messages-error-content,
ul.messagesTop .messages-succ .messages-succ-content, 
ul.messagesTop .messages-warn .messages-warn-content, 
ul.messagesTop .messages-warn .messages-exp-content,
ul.messagesTop .messages-info .messages-info-content {
	display: none;
	padding-left: 20px;
	padding-bottom: 5px;
	padding-right: 10px;
}

ul.messagesTop .messages-topError {
	padding: 10px 5px 10px 40px;
	font-weight: bold;
	background-image: url(messages-error-icon.png);
	background-repeat: no-repeat;
	background-position: 12px center;
	-moz-border-radius: 4px; 
	-webkit-border-radius: 4px; 
	-khtml-border-radius: 4px; 
	border-radius: 4px;
}

ul.messagesTop .messages-error .selected {
	background-color: #ffc2ae;
	-moz-border-radius-bottomright: 0px;
	border-bottom-right-radius: 0px;
	-moz-border-radius-bottomleft: 0px;
	border-bottom-left-radius: 0px;
}

ul.messagesTop .messages-topError-arrow {
	background-image: url(messages-error-arrow.png);
	background-repeat: no-repeat;
	display: inline-block;
    height: 16px;
    width: 16px;
    position: absolute;
    right: 60px;
}

ul.messagesTop .messages-topError .arrow-down {
	background-position: 0px -32px;
}

ul.messagesTop .messages-topError .arrow-up {
	background-position: 0px 0px;
}

ul.messagesTop .messages-error-details-section {
	padding: 2px 0 1px 25px;
	font-size: 12px;
	background-image: url(messages-error-icon.png);
	background-repeat: no-repeat;
	background-position: 9px 2px;
	color: #CC0A0C;
	margin-top: 5px;
}

ul.messagesTop .messages-error .selected-section {
	background-color: #ffe8e0; 
}

ul.messagesTop .messages-details-bold {
	padding: 0px;
	font-weight: bold;
}

ul.messagesTop .messages-details-bold:hover {
	cursor: pointer;
	text-decoration: underline;
}

ul.messagesTop .messages-error-details-bold-arrow {
	background-image: url(messages-error-arrow.png);
	background-repeat: no-repeat;
	display: inline-block;
    height: 16px;
    width: 16px;
    float: left;
    margin: 0px 5px;
}

ul.messagesTop .messages-error-details-section .arrow-right {
	background-position: 0px -16px;
}

ul.messagesTop .messages-error-details-section .arrow-down {
	background-position: 0px -32px;
}

ul.messagesTop .messages-error-details-section .messages-succ-details-section .messages-details-content,
ul.messagesTop .messages-error-details-section .messages-info-details-section .messages-details-content,
ul.messagesTop .messages-error-details-section .messages-warn-details-section .messages-details-content {
	display: none;
	padding-left: 30px;
}

ul.messagesTop .messages-details-content {
	display: none;
	padding-left: 30px;
}

ul.messagesTop .messages-error-details-section .messages-details-content {
	display: block;
	padding-left: 30px;
	background-position: 0px -32px;
}

ul.messagesTop .message-info .errorStack {
	color: #555555;
	font-weight: bold;
	font-size: 12px;
	margin-left: 5px;
}

ul.messagesTop .message-info .errorStack:hover {
	text-decoration: underline;
	cursor: pointer;
}

ul.messagesTop .errorStack-content {
	margin: 5px 0 5px 15px;
	overflow: auto;
	display: none;
}

ul.messagesTop .messages-warn {
	color: #9F6000;
	border: 1px solid #9F6000;
	padding: 0px;
	-moz-border-radius: 4px; 
	-webkit-border-radius: 4px; 
	-khtml-border-radius: 4px; 
	border-radius: 4px;
	background: #FEEFB3;
	display: block;
}

ul.messagesTop .messages-topWarn {
	padding: 10px 5px 10px 40px;
	font-weight: bold;
	background-image: url(messages-warn-icon.png);
	background-repeat: no-repeat;
	background-position: 12px center;
	-moz-border-radius: 4px; 
	-webkit-border-radius: 4px; 
	-khtml-border-radius: 4px; 
	border-radius: 4px;
}

ul.messagesTop .messages-warn .selected {
	background-color: #fce48d;
	-moz-border-radius-bottomright: 0px;
	border-bottom-right-radius: 0px;
	-moz-border-radius-bottomleft: 0px;
	border-bottom-left-radius: 0px;
}

ul.messagesTop .messages-topWarn-arrow {
	background-image: url(messages-warn-arrow.png);
	background-repeat: no-repeat;
	display: inline-block;
    height: 16px;
    width: 16px;
    float: right;
    top: 50%;
}

ul.messagesTop .messages-topWarn .arrow-down {
	background-position: 0px -32px;
}

ul.messagesTop .messages-topWarn .arrow-up {
	background-position: 0px 0px;
}

ul.messagesTop .messages-warn-details-section {
	padding: 2px 0 1px 25px;
	font-size: 12px;
	background-image: url(messages-warn-icon.png);
	background-repeat: no-repeat;
	background-position: 9px 2px;
	margin-top: 5px;
	color: #d28b1e;
}

ul.messagesTop .messages-warn .selected-section {
	background-color: #fdf4d5; 
}

ul.messagesTop .messages-warn-details-bold-arrow {
	background-image: url(messages-warn-arrow.png);
	background-repeat: no-repeat;
	display: inline-block;
    height: 16px;
    width: 16px;
    float: left;
    margin: 0px 5px;
}

ul.messagesTop .messages-warn-details-section .arrow-right {
	background-position: 0px -16px;
}

ul.messagesTop .messages-warn-details-section .arrow-down {
	background-position: 0px -32px;
}

ul.messagesTop .messages-succ {
	color: #4F8A10;
	border: 1px solid #4F8A10;
	padding: 0px;
	-moz-border-radius: 4px; 
	-webkit-border-radius: 4px; 
	-khtml-border-radius: 4px; 
	border-radius: 4px;
	background: #DFF2BF;
	display: block;
}
/* ... */

